--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
 APP_NAME="HandCrafted"
-APP_URL="http://localhost:3000"
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL="http://localhost:3000"
+AUTH_URL=http://localhost:3000/api/auth
+AUTH_SECRET=thequickbrownfoxjumpsoverthelazydog
